--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,11 @@ version: '3.7'
 services:
   pgdb:
     image: astrolabe/vosdb
+    deploy:
+      restart_policy:
+        condition: on-failure
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     networks:
@@ -12,26 +15,38 @@ services:
 
   vos:
     image: astrolabe/dals
+    deploy:
+      restart_policy:
+        condition: on-failure
     volumes:
       - ./images:/vos/images
     ports:
       - "8080:8080"
     networks:
       - net
-    depends_on: 
+    depends_on:
       - pgdb
 
   firefly:
     image: ipac/firefly:release-2019.2.1
+    deploy:
+      restart_policy:
+        condition: none
+    environment:
+      - DEBUG
+      - _JAVA_OPTIONS=-Xms512m -Xmx8092m
     volumes:
       - ./images:/external
     ports:
       - "8888:8080"
     networks:
       - net
-    depends_on: 
+    depends_on:
       - pgdb
       - vos
 
 networks:
   net:
+
+volumes:
+  pgdata:
