Add linked Cuts build directory to Docker Compose file. (For development only!)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,7 @@ services:
     networks:
       - net
     volumes:
-#     - '.:/cuts'
+      - './cuts:/cuts:ro'
       - './images:/vos/images:ro'
     ports:
       - '8000:8000'
