Experimental addition of stacks visualizer image.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,19 @@ services:
       - celery
 
 
+  visualizer:
+    image: dockersamples/visualizer:stable
+    ports:
+      - "9090:8080"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+    deploy:
+      placement:
+        constraints: [node.role == manager]
+    networks:
+      - net
+
+
 networks:
   net:
     attachable: true
