Fix: use only development containers.

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -25,7 +25,7 @@ services:
 
 
   celery:
-    image: astrolabe/cuts:latest
+    image: cuts:devel
     command: celery worker -l debug -A cuts.blueprints.img.tasks
     deploy:
       restart_policy:
