--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
 
 
   dals:
-    image: astrolabe/dals:latest
+    image: astrolabe/dals:1H
     deploy:
       restart_policy:
         condition: on-failure
