Try to resolve NGINX startup failure: re-order last and add depends_on: section.

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,19 +1,6 @@
 version: "3.7"
 
 services:
-  nginx:
-    image: nginx:1.17.9
-    ports:
-      - 80:80
-#      - 443:443
-    environment:
-#      - NGINX_HOST=hector.cyverse.org
-      - NGINX_HOST=esne
-      - NGINX_PORT=80
-    volumes:
-      - /vos/config/nginx.conf:/etc/nginx/nginx.conf
-
-
   redis:
     image: redis:5.0-alpine
     command: redis-server --requirepass devpassword
@@ -73,6 +60,26 @@ services:
       - "8000:8000"
     depends_on:
       - celery
+
+
+  nginx:
+    image: nginx:1.17.9
+    deploy:
+      restart_policy:
+        condition: none
+    environment:
+#      - NGINX_HOST=hector.cyverse.org
+      - NGINX_HOST=esne
+      - NGINX_PORT=80
+    volumes:
+      - /vos/config/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - 80:80
+#      - 443:443
+    depends_on:
+      - cuts
+      - dals
+
 
 
 networks:
