Activate HTTPS: redirect HTTP to HTTPS. Remove unneeded worker declarations.

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,4 @@
-worker_processes 1;
-
-events { worker_connections 1024; }
+events { }
 
 http {
     sendfile on;
@@ -13,19 +11,18 @@ http {
         server dals:8080;
     }
 
-    # server {
-    #     listen    80;
-    #     server_name esne;
-    #     return 301 https://$host$request_uri;
-    # }
+    server {
+        listen  80;
+        server_name esne;
+        return 301 https://$host$request_uri;
+    }
 
     server {
-        listen    80;
-#        listen    443 ssl;
+        listen  443 ssl;
         server_name esne;
 ###       server_name hector.cyverse.org
-#        ssl_certificate      /vos/config/certs/cyverse.org.crt;
-#        ssl_certificate_key  /vos/config/certs/cyverse.key;
+        ssl_certificate      /vos/config/certs/cyverse.org.crt;
+        ssl_certificate_key  /vos/config/certs/cyverse.key;
 
         location / {
             proxy_pass http://cuts-back/cuts/;
@@ -43,6 +40,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Host $server_name;
+            add_header X-Upstream $upstream_addr;
         }
 
         location /dals {
@@ -52,6 +50,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Host $server_name;
+            add_header X-Upstream $upstream_addr;
         }
     }
 
