Add basic auth config for locations.

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,6 +25,8 @@ http {
         ssl_certificate_key  /vos/config/certs/cyverse.key;
 
         location / {
+            auth_basic "Astrolabe/JWST Image/Cutout Server";
+            auth_basic_user_file /vos/config/.htpasswd;
             proxy_pass http://cuts-back/cuts/;
             proxy_redirect off;
             proxy_set_header Host $host;
@@ -34,6 +36,8 @@ http {
         }
 
         location /cuts {
+            auth_basic "Astrolabe/JWST Image/Cutout Server";
+            auth_basic_user_file /vos/config/.htpasswd;
             proxy_pass http://cuts-back;
             proxy_redirect off;
             proxy_set_header Host $host;
@@ -44,6 +48,8 @@ http {
         }
 
         location /dals {
+            auth_basic "Astrolabe/JWST Virtual Observatory Server";
+            auth_basic_user_file /vos/config/.htpasswd;
             proxy_pass http://dals-back;
             proxy_redirect off;
             proxy_set_header Host $host;
