--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -84,7 +84,7 @@ services:
       - NGINX_PORT=443
     volumes:
       - /vos/config/nginx.conf:/etc/nginx/nginx.conf
-      - /vos/config/certs:/vos/config/certs:ro
+      - /vos/config:/vos/config
     ports:
       - 80:80
       - 443:443
