--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: "3.7"
 
 services:
   redis:
@@ -10,7 +10,9 @@ services:
     volumes:
       - redis:/data
     ports:
-      - '6379:6379'
+      - "6379:6379"
+    networks:
+      - vos_net
 
 
   pgdb:
@@ -22,6 +24,8 @@ services:
       - pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    networks:
+      - vos_net
 
 
   celery:
@@ -30,12 +34,14 @@ services:
     deploy:
       restart_policy:
         condition: none
+    networks:
+      - vos_net
     depends_on:
       - redis
 
 
   dals:
-    image: astrolabe/dals:1H
+    image: astrolabe/dals:latest
     deploy:
       restart_policy:
         condition: on-failure
@@ -43,6 +49,8 @@ services:
       - ./images:/vos/images
     ports:
       - "8080:8080"
+    networks:
+      - vos_net
     depends_on:
       - pgdb
 
@@ -53,17 +61,38 @@ services:
       restart_policy:
         condition: none
     environment:
-      PYTHONUNBUFFERED: 'true'
+      PYTHONUNBUFFERED: "true"
     volumes:
-      - './images:/vos/images:ro'
+      - ./images:/vos/images:ro
     ports:
-      - '8000:8000'
+      - "8000:8000"
+    networks:
+      - vos_net
     depends_on:
       - celery
 
 
+  nginx:
+    image: nginx:1.17.9
+    deploy:
+      restart_policy:
+        condition: on-failure
+    volumes:
+      - /vos/config/nginx.conf:/etc/nginx/nginx.conf
+      - /vos/config:/vos/config
+    ports:
+      - 80:80
+      - 443:443
+    networks:
+      - vos_net
+      - default
+    depends_on:
+      - cuts
+      - dals
+
+
 networks:
-  default:
+  vos_net:
     name: vos_net
     attachable: true
 
