--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,7 @@ http {
     server {
         listen  443 ssl;
         server_name esne;
-###       server_name hector.cyverse.org
+###       server_name hector.cyverse.org;
         ssl_certificate      /vos/config/certs/cyverse.org.crt;
         ssl_certificate_key  /vos/config/certs/cyverse.key;
 
