Default to production server vs dev server.

--- a/nginx.conf
+++ b/nginx.conf
@@ -19,8 +19,8 @@ http {
 
     server {
         listen  443 ssl;
-        server_name esne;
-###       server_name hector.cyverse.org;
+##        server_name esne;
+        server_name hector.cyverse.org;
         ssl_certificate      /vos/config/certs/cyverse.org.crt;
         ssl_certificate_key  /vos/config/certs/cyverse.key;
 
