--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,10 @@ http {
         server dals:8080;
     }
 
+    upstream ff-back {
+        server localhost:8888;
+    }
+
     server {
         listen  80;
         server_name esne;
@@ -56,6 +60,20 @@ http {
             auth_basic "Astrolabe/JWST Virtual Observatory Server";
             auth_basic_user_file /vos/config/.htpasswd;
             proxy_pass http://dals-back;
+            proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-By $server_addr:$server_port;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Host $server_name;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            add_header X-Upstream $upstream_addr;
+        }
+
+        location /local {
+            auth_basic "Astrolabe/JWST customized Firefly Server";
+            auth_basic_user_file /vos/config/.htpasswd;
+            proxy_pass http://ff-back/local;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
