Concatenate Cyverse certs together to create chained cert.

--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,7 @@ http {
         listen  443 ssl;
 ##        server_name esne;
         server_name hector.cyverse.org;
-        ssl_certificate      /vos/config/certs/cyverse.org.crt;
+        ssl_certificate      /vos/config/certs/cyverse.chained.crt;
         ssl_certificate_key  /vos/config/certs/cyverse.key;
 
         location / {
