Add crucial java.security.egd option to DALserver to stop 7 minute Tomcat startup due to SecureRandom problem.

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -45,6 +45,8 @@ services:
     deploy:
       restart_policy:
         condition: on-failure
+    environment:
+      - _JAVA_OPTIONS=-Xms256m -Xmx2048m -Djava.security.egd=file:///dev/urandom
     volumes:
       - ./images:/vos/images
     ports:
