--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -45,6 +45,8 @@ services:
     deploy:
       restart_policy:
         condition: on-failure
+    environment:
+      - _JAVA_OPTIONS=-Xms256m -Xmx2048m -Djava.security.egd=file:///dev/urandom
     volumes:
       - ./images:/vos/images
     ports:
@@ -70,6 +72,22 @@ services:
       - vos_net
     depends_on:
       - celery
+
+
+  firefly:
+    image: astrolabe/ffal:latest
+    deploy:
+      restart_policy:
+        condition: none
+    environment:
+      # - DEBUG=TRUE
+      - _JAVA_OPTIONS=-Xms512m -Xmx16384m -Djava.security.egd=file:///dev/urandom
+    volumes:
+      - ./images:/external:ro
+    ports:
+      - "8888:8080"
+    networks:
+      - default
 
 
   nginx:
