--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,11 @@ events { }
 http {
     sendfile on;
 
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
+
     upstream cuts-back {
         server cuts:8000;
     }
@@ -12,6 +17,7 @@ http {
     }
 
     upstream ff-back {
+        ip_hash;
         server firefly:8080;
     }
 
@@ -23,7 +29,6 @@ http {
 
     server {
         listen  443 ssl;
-##        server_name esne;
         server_name hector.cyverse.org;
         ssl_certificate      /vos/config/certs/cyverse.chained.crt;
         ssl_certificate_key  /vos/config/certs/cyverse.key;
@@ -32,13 +37,9 @@ http {
             auth_basic "Astrolabe/JWST Image/Cutout Server";
             auth_basic_user_file /vos/config/.htpasswd;
             proxy_pass http://cuts-back/cuts/;
-            proxy_redirect off;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-By $server_addr:$server_port;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Host $server_name;
-            proxy_set_header X-Forwarded-Proto $scheme;
             add_header X-Upstream $upstream_addr;
         }
 
@@ -46,13 +47,9 @@ http {
             auth_basic "Astrolabe/JWST Image/Cutout Server";
             auth_basic_user_file /vos/config/.htpasswd;
             proxy_pass http://cuts-back;
-            proxy_redirect off;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-By $server_addr:$server_port;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Host $server_name;
-            proxy_set_header X-Forwarded-Proto $scheme;
             add_header X-Upstream $upstream_addr;
         }
 
@@ -60,13 +57,9 @@ http {
             auth_basic "Astrolabe/JWST Virtual Observatory Server";
             auth_basic_user_file /vos/config/.htpasswd;
             proxy_pass http://dals-back;
-            proxy_redirect off;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-By $server_addr:$server_port;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Host $server_name;
-            proxy_set_header X-Forwarded-Proto $scheme;
             add_header X-Upstream $upstream_addr;
         }
 
@@ -74,13 +67,23 @@ http {
             auth_basic "Astrolabe/JWST customized Firefly Server";
             auth_basic_user_file /vos/config/.htpasswd;
             proxy_pass http://ff-back/local;
-            proxy_redirect off;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-By $server_addr:$server_port;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Host $server_name;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            add_header X-Upstream $upstream_addr;
+        }
+
+        location /firefly {
+            auth_basic "Astrolabe/JWST customized Firefly Server";
+            auth_basic_user_file /vos/config/.htpasswd;
+            proxy_pass http://ff-back/firefly;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
             add_header X-Upstream $upstream_addr;
         }
     }
