--- a/nginx.conf
+++ b/nginx.conf
@@ -19,8 +19,8 @@ http {
 
     server {
         listen  443 ssl;
-##        server_name esne;
         server_name hector.cyverse.org;
+        ssl_protocols TLSv1.2 TLSv1.3;
         ssl_certificate      /vos/config/certs/cyverse.chained.crt;
         ssl_certificate_key  /vos/config/certs/cyverse.key;
 
@@ -28,7 +28,7 @@ http {
             auth_basic "Astrolabe/JWST Image/Cutout Server";
             auth_basic_user_file /vos/config/.htpasswd;
             proxy_pass http://cuts-back/cuts/;
-            proxy_redirect off;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-By $server_addr:$server_port;
@@ -42,7 +42,7 @@ http {
             auth_basic "Astrolabe/JWST Image/Cutout Server";
             auth_basic_user_file /vos/config/.htpasswd;
             proxy_pass http://cuts-back;
-            proxy_redirect off;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-By $server_addr:$server_port;
@@ -56,7 +56,7 @@ http {
             auth_basic "Astrolabe/JWST Virtual Observatory Server";
             auth_basic_user_file /vos/config/.htpasswd;
             proxy_pass http://dals-back;
-            proxy_redirect off;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-By $server_addr:$server_port;
