Restrict TLS protocol versions.

--- a/nginx.conf
+++ b/nginx.conf
@@ -30,6 +30,7 @@ http {
     server {
         listen  443 ssl;
         server_name hector.cyverse.org;
+        ssl_protocols TLSv1.2 TLSv1.3;
         ssl_certificate      /vos/config/certs/cyverse.chained.crt;
         ssl_certificate_key  /vos/config/certs/cyverse.key;
 
