--- a/nginx.conf
+++ b/nginx.conf
@@ -3,10 +3,10 @@ events { }
 http {
     sendfile on;
 
-    map $http_upgrade $connection_upgrade {
-        default upgrade;
-        '' close;
-    }
+    # map $http_upgrade $connection_upgrade {
+    #     default upgrade;
+    #     '' close;
+    # }
 
     upstream cuts-back {
         server cuts:8000;
@@ -82,7 +82,7 @@ http {
             proxy_pass http://ff-back/local;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
+            proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             add_header X-Upstream $upstream_addr;
@@ -98,7 +98,7 @@ http {
             proxy_pass http://ff-back/firefly;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
+            proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             add_header X-Upstream $upstream_addr;
