Drop script kiddie requests. Add tcp_nopush optimization.

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,7 @@ events { }
 
 http {
     sendfile on;
+    tcp_nopush on;
 
     # map $http_upgrade $connection_upgrade {
     #     default upgrade;
@@ -33,6 +34,11 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_certificate      /vos/config/certs/cyverse.chained.crt;
         ssl_certificate_key  /vos/config/certs/cyverse.key;
+
+        # drop script kiddie requests
+        location ~ (\.php|.aspx|.asp|myadmin) {
+            return 404;
+        }
 
         location / {
             auth_basic "Astrolabe/JWST Image/Cutout Server";
