--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       restart_policy:
         condition: on-failure
     environment:
-      - _JAVA_OPTIONS=-Xms256m -Xmx2048m -Djava.security.egd=file:///dev/urandom
+      - _JAVA_OPTIONS=-Xms256m -Xmx2048m -Djava.security.egd=file:/dev/./urandom
     volumes:
       - ./images:/vos/images
     networks:
@@ -73,7 +73,7 @@ services:
         condition: none
     environment:
       # - DEBUG=TRUE
-      - _JAVA_OPTIONS=-Xms512m -Xmx16384m -Djava.security.egd=file:///dev/urandom
+      - _JAVA_OPTIONS=-Xms512m -Xmx16384m -Djava.security.egd=file:/dev/./urandom
     volumes:
       - ./images:/external:ro
     networks:
