Update celery command: -A flag.

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -26,7 +26,7 @@ services:
 
   celery:
     image: cuts:devel
-    command: celery worker -l debug -A cuts.blueprints.img.tasks
+    command: celery -A cuts.blueprints.img.tasks worker -l debug
     deploy:
       restart_policy:
         condition: none
