--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,9 +42,10 @@ services:
       restart_policy:
         condition: on-failure
     environment:
+      # - _JAVA_OPTIONS=-Xms256m -Xmx2048m -Djava.security.egd=file:///dev/urandom
       - _JAVA_OPTIONS=-Xms256m -Xmx2048m -Djava.security.egd=file:/dev/./urandom
     volumes:
-      - ./images:/vos/images
+      - /vos/images:/vos/images
     networks:
       - vos_net
     depends_on:
@@ -59,7 +60,7 @@ services:
     environment:
       PYTHONUNBUFFERED: "true"
     volumes:
-      - ./images:/vos/images:ro
+      - /vos/images:/vos/images:ro
     networks:
       - vos_net
     depends_on:
@@ -73,9 +74,10 @@ services:
         condition: none
     environment:
       # - DEBUG=TRUE
+      # - _JAVA_OPTIONS=-Xms512m -Xmx16384m -Djava.security.egd=file:///dev/urandom
       - _JAVA_OPTIONS=-Xms512m -Xmx16384m -Djava.security.egd=file:/dev/./urandom
     volumes:
-      - ./images:/external:ro
+      - /vos/images:/external:ro
     networks:
       - vos_net
 
