Update for DATA move. Remove server-sdie Firefly.

--- a/nginx.conf
+++ b/nginx.conf
@@ -17,14 +17,9 @@ http {
         server dals:8080;
     }
 
-    upstream ff-back {
-        ip_hash;
-        server firefly:8080;
-    }
-
     server {
         listen  80;
-        server_name esne;
+        server_name alvos.arizona.edu;
         return 301 https://$host$request_uri;
     }
 
@@ -32,8 +27,8 @@ http {
         listen  443 ssl;
         server_name hector.cyverse.org;
         ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_certificate      /vos/config/certs/cyverse.chained.crt;
-        ssl_certificate_key  /vos/config/certs/cyverse.key;
+        ssl_certificate      /usr/local/data/vos/config/certs/cyverse.chained.crt;
+        ssl_certificate_key  /usr/local/data/vos/config/certs/cyverse.key;
 
         # drop script kiddie requests
         location ~ (\.php|.aspx|.asp|myadmin) {
@@ -42,7 +37,7 @@ http {
 
         location / {
             auth_basic "Astrolabe/JWST Image/Cutout Server";
-            auth_basic_user_file /vos/config/.htpasswd;
+            auth_basic_user_file /usr/local/data/vos/config/.htpasswd;
             proxy_pass http://cuts-back/cuts/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
@@ -56,7 +51,7 @@ http {
 
         location /cuts {
             auth_basic "Astrolabe/JWST Image/Cutout Server";
-            auth_basic_user_file /vos/config/.htpasswd;
+            auth_basic_user_file /usr/local/data/vos/config/.htpasswd;
             proxy_pass http://cuts-back;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
@@ -70,41 +65,9 @@ http {
 
         location /dals {
             auth_basic "Astrolabe/JWST Virtual Observatory Server";
-            auth_basic_user_file /vos/config/.htpasswd;
+            auth_basic_user_file /usr/local/data/vos/config/.htpasswd;
             proxy_pass http://dals-back;
             proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            add_header X-Upstream $upstream_addr;
-            proxy_set_header X-Forwarded-By $server_addr:$server_port;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Host $server_name;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location /local {
-            auth_basic "Astrolabe/JWST customized Firefly Server";
-            auth_basic_user_file /vos/config/.htpasswd;
-            proxy_pass http://ff-back/local;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            add_header X-Upstream $upstream_addr;
-            proxy_set_header X-Forwarded-By $server_addr:$server_port;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Host $server_name;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location /firefly {
-            auth_basic "Astrolabe/JWST customized Firefly Server";
-            auth_basic_user_file /vos/config/.htpasswd;
-            proxy_pass http://ff-back/firefly;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             add_header X-Upstream $upstream_addr;
