--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -34,6 +34,7 @@ services:
     image: astrolabe/dals
     restart: on-failure
     environment:
+      # - _JAVA_OPTIONS=-Xms256m -Xmx2048m -Djava.security.egd=file:///dev/urandom
       - _JAVA_OPTIONS=-Xms256m -Xmx2048m -Djava.security.egd=file:/dev/./urandom
     volumes:
       - ./images:/usr/local/data/vos/images
@@ -54,18 +55,6 @@ services:
       - vos_net
     depends_on:
       - celery
-
-
-  firefly:
-    image: astrolabe/ffal
-    restart: "no"
-    environment:
-      # - DEBUG=TRUE
-      - _JAVA_OPTIONS=-Xms512m -Xmx16384m -Djava.security.egd=file:/dev/./urandom
-    volumes:
-      - ./images:/external:ro
-    networks:
-      - vos_net
 
 
   nginx:
