--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -15,7 +15,7 @@ services:
     image: astrolabe/vosdb
     restart: "no"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - vos_pgdata:/var/lib/postgresql/data
     networks:
       - vos_net
 
@@ -83,5 +83,6 @@ networks:
     attachable: true
 
 volumes:
-  pgdata:
+  vos_pgdata:
+    external: true
   redis:
